There is still work left to do, but (almost) everything that was working before the branch is now working again, so, merged back to trunk.
git-svn-id: svn://svn.code.sf.net/p/qttabbar/code/trunk@419 a528694c-761d-408f-aad8-18f83640fb98

--- a/QTTabBar/Resources_String.resx
+++ b/QTTabBar/Resources_String.resx
@@ -215,6 +215,9 @@
   <data name="TaskBar_Titles" xml:space="preserve">
     <value>Groups;Undo closed;Applications;Recently opened files</value>
   </data>
+  <data name="TrayIcon" xml:space="preserve">
+    <value>1 window;{0} windows</value>
+  </data>
   <data name="UpdateCheck" xml:space="preserve">
     <value>A new version of QTTabBar has been released:;Press OK to go to the web site.;Your version of QTTabBar is up to date.;New development version found:</value>
   </data>
